--- a/notebooks/plot_results_lcbench.ipynb
+++ b/notebooks/plot_results_lcbench.ipynb
@@ -8,10 +8,7 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import sys\n",
-    "sys.path.insert(0, \"../\")\n",
-    "sys.path.insert(0, \"../../\")"
+    "%autoreload 2"
    ]
   },
   {
@@ -21,12 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from methods import lc_extrapolation, pfn\n",
-    "from tasks import toy_priors\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import torch\n",
-    "\n",
     "import json\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
@@ -38,25 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "331cf250",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../data/lcbench_val_data.npy\", \"rb\") as f:\n",
-    "    X = np.load(f).reshape(-1, 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e417c790",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
    "id": "ecb4ee7b",
    "metadata": {},
    "outputs": [],
@@ -67,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "14af9799",
    "metadata": {},
    "outputs": [],
@@ -77,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "5e8344c0",
    "metadata": {
     "scrolled": true
@@ -295,7 +269,7 @@
        "[262500 rows x 10 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "c2cbaef5",
    "metadata": {
     "scrolled": true
@@ -318,7 +292,7 @@
        "<AxesSubplot:xlabel='cutoff', ylabel='ll'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -344,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "ce0bb706",
    "metadata": {},
    "outputs": [
@@ -560,7 +534,7 @@
        "[262500 rows x 10 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "id": "85a29506",
    "metadata": {},
    "outputs": [],
@@ -582,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "id": "48e1f3b5",
    "metadata": {},
    "outputs": [
